--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "react-beautiful-dnd": "^13.1.1",
     "react-day-picker": "^8.10.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-hot-toast": "^2.4.1",
     "react-icons": "^5.2.1",
     "react-map-gl": "^7.1.7",
